--- a/TTT.css
+++ b/TTT.css
@@ -34,20 +34,11 @@ nav ul{
     font-family: 'Roboto', sans-serif;
     position:relative
 }
-h1{
+/* h1{
      
     padding-bottom: 10px;
-}
-.turn{
-     font-weight: 10px;
-    padding-left: 110px;   
-}
-.btn
-{
-     
-  padding-left: 100px;
-  padding-top:10px ;
-}
+} */
+
 .box 
 {
     border:2px solid black;
